# ROI_Calculator

./: .gitignore  pyproject.toml
rei_simulator/: __init__.py  __main__.py  amortization.py  app.py  asset_building.py  asset_building_gui.py  asset_building_plots.py  comparison.py  config.py  constants.py  cost_growth.py  formulas.py  gui.py  investment_summary.py  investment_summary_gui.py  investment_summary_plots.py  main.py  metrics.py  plot_common.py  plots.py  recurring_costs.py  recurring_costs_gui.py  recurring_costs_plots.py  summary_report.py  tax.py  tooltip_data.py  validation.py  widgets.py
rei_simulator/config/: __init__.py  persistence.py  schema.py
rei_simulator/model/: __init__.py  data_model.py  engine.py
rei_simulator/ui/: __init__.py  window.py
rei_simulator/ui/charts/: __init__.py
rei_simulator/ui/theme/: __init__.py  colors.py  styles.py  widgets.py
rei_simulator/ui/widgets/: __init__.py  labeled_checkbox.py  labeled_dropdown.py  labeled_entry.py  tooltip.py
