[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rei-simulator"
version = "0.1.0"
description = "Real Estate Investment Projection Calculator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rei-simulator = "rei_simulator.main:main"
